--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,7 +11,7 @@
 
 .container{
     display: grid;
-    grid-template-columns: 1fr 3fr;
+    grid-template-columns: 250px 1fr;
 }
 
 .sidebar {
@@ -32,5 +32,7 @@ input, main, main > div{
 }
 
 
-
+button{
+    border-radius: 40px;
+}
 
