--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,8 +16,15 @@
 
 .sidebar {
     grid-area: 1 / 1 / 3 / 2;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    padding: 20px;
 }
 
+li{
+    margin-bottom: 15px;
+}
 
 
 /* Theme */
