--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,6 +12,7 @@
 .container{
     display: grid;
     grid-template-columns: 250px 1fr;
+    grid-template-rows: max-content 1fr;
     min-height: 100vh;
 }
 
