--- a/styles/styles.css
+++ b/styles/styles.css
@@ -28,6 +28,14 @@ li{
     margin-bottom: 15px;
 }
 
+main{
+    display: grid;
+    grid-template-columns: 1fr 300px;
+}
+
+.project-wrapper{
+    grid-row: 1 / 3;
+}
 
 /* Theme */
 
