Make Project Cards Responsive
Made Project card area of site change dynamically with window sizing

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -35,6 +35,20 @@ main{
 
 .project-wrapper{
     grid-row: 1 / 3;
+    padding: 12px;
+}
+
+.card-wrapper{
+    box-sizing: border-box;
+    display: grid;
+    gap: 12px;
+    padding: 12px;
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+}
+
+.card-wrapper > .card{
+    width: 400px;
+    height: 200px;
 }
 
 /* Theme */
