Add Spacing to Cards
Layout applied to Trending and announcement components

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -55,6 +55,9 @@ main{
 .trending-wrapper > .card, .announcement-wrapper > .card{
     width: 250px;
     height: 400px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
 }
 /* Theme */
 
