--- a/styles/styles.css
+++ b/styles/styles.css
@@ -46,10 +46,14 @@ main{
     grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
 }
 
+
+.card{
+    box-sizing: border-box;
+    padding: 20px;
+}
 .card-wrapper > .card{
     width: 400px;
     height: 200px;
-    box-sizing: border-box;
 }
 
 .trending-wrapper > .card, .announcement-wrapper > .card{
@@ -57,8 +61,13 @@ main{
     height: 400px;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-between;
 }
+.trending-wrapper > .card{
+    padding-top: 40px;
+    padding-bottom: 40px;
+}
+
 /* Theme */
 
 .sidebar, button{
@@ -82,6 +91,7 @@ button{
 
 .card{
     background-color: white;
+    border-radius: 8px;
 }
 
 .card p{
@@ -93,6 +103,13 @@ button{
 }
 
 
+.announcement{
+    border-bottom: 1px solid grey;
+}
+
+.announcement:last-child{
+    border: none;
+}
 /* Typeface */
 
 body{
