--- a/styles/styles.css
+++ b/styles/styles.css
@@ -33,18 +33,17 @@ li{
 main{
     display: grid;
     grid-template-columns: 1fr 300px;
+    padding: 12px
 }
 
 .project-wrapper{
     grid-row: 1 / 3;
-    padding: 12px;
 }
 
 .card-wrapper{
     box-sizing: border-box;
     display: grid;
     gap: 12px;
-    padding: 12px;
     grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
 }
 
