--- a/styles/styles.css
+++ b/styles/styles.css
@@ -24,6 +24,13 @@
     padding: 20px;
 }
 
+.sidebar h1{
+    display: flex;
+    align-items: center;
+    font-size: 1.5rem;
+}
+
+
 li{
     margin-bottom: 15px;
     display: flex;
