--- a/styles/styles.css
+++ b/styles/styles.css
@@ -43,6 +43,15 @@ main{
     padding: 12px
 }
 
+.search{
+    display: flex;
+    align-content: center;
+}
+
+[type='search']{
+    flex-basis: 800px
+}
+
 .project-wrapper{
     grid-row: 1 / 3;
 }
@@ -121,6 +130,11 @@ button{
 .announcement:last-child{
     border: none;
 }
+
+[type='search']{
+    border: none;
+    border-radius: 10px;
+}
 /* Typeface */
 
 body{
@@ -131,15 +145,16 @@ body{
 /* SVG Stuff */
 
 svg{
-    fill: white;
     height: 2em;
     width: 2em;
     margin-right: 20px;
 }
 
-main svg{
-    fill: black;
+.sidebar svg{
+    fill: white;
 }
+
+
 
 .card-actions{
     align-self: flex-end;
