--- a/styles/styles.css
+++ b/styles/styles.css
@@ -94,6 +94,9 @@ main{
 
 header{
     padding: 40px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    position: relative;
+    z-index: 10;
 }
 
 
@@ -123,6 +126,7 @@ button{
     background-color: white;
     border-radius: 8px;
     box-sizing: border-box;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .card p{
