--- a/styles/styles.css
+++ b/styles/styles.css
@@ -204,8 +204,8 @@ svg{
 }
 
 .large-pic{
-    height: ;
-    width: ;
+    height: 100px;
+    width: 100px;
 }
 
 .user{
@@ -218,4 +218,20 @@ svg{
     display: flex;
     flex-direction: column;
     justify-content: center;
+}
+
+.intro{
+    display: flex;
+    gap: 20px;
+}
+
+.intro-text{
+    font-weight: bold;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 10px;
+}
+.intro-text h1{
+    font-size: 1.5rem;
 }
